<resources>
    <string name="app_name">MiAsoApp</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar">ingresar</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="asignar_prestamo">Asignar Prestamo</string>
    <string name="ver_mis_prestamos">Ver mis prestamos</string>
    <string name="gestionar_mis_ahorros">Gestionar mis ahorros</string>
    <string name="calcula_cuota">Calcula cuota</string>
    <string name="informacion_personal">Informacion Personal</string>
    <string name="agregarClienteBtn">Agregar Cliente</string>
    <string name="direccionClienteTxt">Direccion</string>
    <string name="salarioClienteTxt">Salario</string>
    <string name="addClienteTxtView">Agregar Cliente</string>
    <string name="eliminar_cliente">Eliminar Cliente</string>
    <string name="telefonoClienteTxt">Teléfono</string>
    <string name="nombreClienteTxt">Nombre</string>
    <string name="cedulaClienteTxt">Cedula</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="fechaNacimientoClienteTxt">Fecha Nacimiento (dd/mm//yyyy)</string>
    <string name="salarioView">Salario: </string>
    <string name="creditoView">Credito: </string>
    <string name="cedulaView">Cedula: </string>
    <string name="nombre_cliente_view">Nombre: </string>
    <string name="consulta_cliente">Número cédula cliente</string>
    <string name="telefonoView">Telefono: </string>
    <string name="periodoView">Periodo: </string>
    <string name="tipoView">Tipo: </string>
    <string name="info_prestamo">Información del prestamo</string>
    <string name="nombreUsuarioTxt">Nombre usuario</string>
    <string name="contrasenaClienteTxt">Contraseña</string>
    <string name="pagar">Pagar</string>
    <string name="mensualidadView">Mensualidad: </string>
    <string name="periodoFinalView">Periodo: </string>
    <string name="info_cuota">Detalles y montos</string>
    <string name="procesar_btn">Procesar</string>
    <string name="tipoFinalView">Tipo: </string>
    <string name="interesView">Interés: </string>
    <string name="ingresa_un_n_mero_decimal">Ingresa tu nueva cifra de ahorro(+5000)</string>
    <string name="guardar">Guardar</string>
    <string name="datos_actuales">Datos Actuales</string>
    <string name="datos_nuevos">Datos Nuevos</string>
    <string name="no">No</string>
    <string name="si">Sí</string>
    <string name="agregar_prestamo">Agregar prestamo</string>
    <string name="seleccione_un_per_odo_de_tiempo">Seleccione un período de tiempo</string>
    <string name="credito">creditoTXT</string>
    <string name="seleccione_el_tipo">Seleccione el tipo</string>
    <string name="hint_creditoTxt">Inserte Monto a Solicitar</string>
    <string name="nac">Nac</string>
    <string name="direccion">Direccion</string>

</resources>