<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ingresarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <EditText
        android:id="@+id/usuarioTxt"
        android:layout_width="307dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="text"
        android:hint ="@string/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/contrasenaTxt"
        android:layout_width="307dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <Button
        android:id="@+id/cargarDatosBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cargar datos de prueba"
        app:layout_constraintTop_toBottomOf="@id/ingresarBtn"
        app:layout_constraintStart_toStartOf="@id/ingresarBtn"
        app:layout_constraintEnd_toEndOf="@id/ingresarBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>