<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editar_ahorro">

    <LinearLayout
        android:id="@+id/savingEditLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:layout_constraintBottom_toTopOf="@id/guardar">


        <TextView
            android:id="@+id/InfoActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/datos_actuales"/>

        <TextView
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/cantidadMensual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/InfoNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/datos_nuevos"/>

        <EditText
            android:id="@+id/editTextNumerico"
            android:layout_width="374dp"
            android:layout_height="56dp"
            android:digits="0123456789."
            android:hint="@string/ingresa_un_n_mero_decimal"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <Switch
            android:id="@+id/switch_button"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintTop_toBottomOf="@id/savingEditLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>